--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Sourcico</title>
+    <title>diigo</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
 
     <!--[if lt IE 9]>
@@ -90,13 +90,13 @@
             <!-- end header inner -->
             <!-- end header -->
             <!-- banner -->
-            <section class="banner_main">
+            <!-- <section class="banner_main">
                 <div class="container-fluid">
                     <div class="row d_flex">
                         <div class="col-md-6">
                             <div class="text-bg">
                                 <h1>We translate your vision into reality</h1>
-                                <p>Sourcico’s purpose is to enable you to speed-up your development pace while maintaining cost-efficiancy and flexability.</p>
+                                <p>Sourcico’s purpose is to enable you to speed-up your development pace while maintaining cost-efficiancy and flexability. Sourcico is an international compan</p>
                                 <a href="#">Read More</a>
                             </div>
                         </div>
@@ -107,76 +107,19 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </div>
     </header>
     <!-- end banner -->
-    <!-- Projects -->
-    <div class="projects">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <span>OUR OFFERING</span>
-                        <h2>Highly productive team extensions for R&D</h2>
-                        <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
-                    <div class="row">
-
-                        <div class="col-md-4">
-                            <div class="projects_box ">
-                                <div class="projects_box ">
-                                    <figure><img src="images/1.png" alt="#" /></figure>
-                                </div>
-                                <h2>SDLC</h2>
-                                <p>
-                                    Our clients use our services for the whole range of the SDLC (Software Development Life Cycle), parts of it or all of it. It can be on an innovative new product with a cutting edge technology or a mature product with a support legacy plan, design, POCs,
-                                    development, Validation, QA and maintenance engineering</p>
-                                <!-- <a class="read_more" href="#">Read more</a> -->
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="projects_box ">
-                                <div class="projects_box ">
-                                    <figure><img src="images/2.png" alt="#" /></figure>
-                                </div>
-                                <h2>R&D</h2>
-                                <p>We are focused on working with R&D organizations using the latest technologies, whether new and agile start-ups or well-established growing, technology companies – Our goal is to enable our clients to fully express their
-                                    innovation
-                                </p>
-                                <!-- <a class="read_more" href="#">Read more</a> -->
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="projects_box ">
-                                <div class="projects_box ">
-                                    <figure><img src="images/3.png" alt="#" /></figure>
-                                </div>
-                                <h2>Agile</h2>
-                                <p>We are a full agile operation. We also adopt any or all of our Client’s standards, starting from coding convention all the way to continuous integration using our client’s systems for source control and bug tracking. All
-                                    of our developers have a fast data connection and can attend video conferences and face-to-face meeting as if they were in the next room.</p>
-                                <!-- <a class="read_more" href="#">Read more</a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end projects -->
     <!-- business -->
     <div class="business">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <span>WHAT WE DO</span>
-                        <h2>Our mission is to enable our clients to go-to-market ASAP with the highest technical skills and at the lowest cost.</h2>
-                        <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers. </p>
+                        <span>Increase your client for</span>
+                        <h2>Better position of Business</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
                     </div>
                 </div>
             </div>
@@ -186,7 +129,8 @@
                         <div class="col-md-12">
                             <div class="business_box ">
                                 <figure><img src="images/business_img.jpg" alt="#" /></figure>
-                                <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believableThere are many variations
+                                    of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
                                 <a class="read_more" href="#">Read more</a>
                             </div>
                         </div>
@@ -196,6 +140,39 @@
         </div>
     </div>
     <!-- end business -->
+    <!-- Projects -->
+    <div class="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="titlepage">
+                        <span>Previous Projects</span>
+                        <h2>Better position of Business</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <div class="row">
+                        <div class="col-md-6 offset-md-3">
+                            <div class="projects_box ">
+                                <figure><img src="images/projects_img.png" alt="#" /></figure>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="projects_box ">
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believableThere are many variations
+                                    of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                                <a class="read_more" href="#">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end projects -->
     <!-- Testimonial -->
     <div class="section">
         <div class="container">
@@ -203,7 +180,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="titlepage">
-                            <h2>Locations</h2>
+                            <h2>Testimonial</h2>
                         </div>
                     </div>
                 </div>
@@ -215,39 +192,9 @@
                     </div>
                     <div class="col-md-9">
                         <div class="Testimonial_box">
-                            <h4>Israel, Tel Aviv</h4>
-                            <p>Our Israeli branch is located in Tel Aviv and is serving mainly the Israeli high-tech industry, it’s well established clients as well as it’s younger and agile startups. Our Management, sales and Administration is based in
-                                Tel Aviv.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="Testimonial_box">
-                            <i><img src="images/plan2.png" alt="#"/></i>
-                        </div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="Testimonial_box">
-                            <h4>Skopje, Macedonia</h4>
-                            <p>Our competence center in Macedonia enjoys a huge talent pool of the finest engineers (around 6,000 in Skopje), in a friendly and beautiful country that has a very rapidly growing economy (3rd in growth rate in Europe 2014)
-                                specially the IT industry, a vivid developers community, all within a short flight away and only one hour time zone difference from Israel.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="Testimonial_box">
-                            <i><img src="images/plan3.png" alt="#"/></i>
-                        </div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="Testimonial_box">
-                            <h4>Chișinău, Moldova</h4>
-                            <p>In the heart of Moldova in addition to its famously good wines there is a healthy growing community of engineering & science serving as one of the most important growth engines of the local economy. The local IT community is
-                                significantly supported by the government and the Moldavian talent pool proved to be a perfect location for our second competence center.
+                            <h4>Donals</h4>
+                            <p>Tof Lorem Ipsum, you need to be There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
+                                believable. If you are going to use a pass <br> age of Lorem Ipsum, you need to be
                             </p>
                         </div>
                     </div>
@@ -302,10 +249,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 ">
-                        <!-- <div class="cont">
+                        <div class="cont">
                             <h3> <strong class="multi"> Free Multipurpose Responsive</strong><br> Landing Page 2019
                             </h3>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="col-md-12">
                         <ul class="social_icon">
@@ -320,7 +267,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Copyright 2019 All Right Reserved By Sourcico</p>
+                            <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
                         </div>
                     </div>
                 </div>
