about & services pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- fevicon -->
     <!-- <link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+    <!-- <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -66,19 +66,19 @@
                                 <div class="collapse navbar-collapse" id="navbarsExample04">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#"> Home  </a>
+                                            <a class="nav-link" href="index.html"> Home  </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">About</a>
+                                            <a class="nav-link" href="about.html">About</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Services</a>
+                                            <a class="nav-link" href="services.html">Services</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Careers</a>
+                                            <a class="nav-link" href="careers.html">Careers</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Contact</a>
+                                            <a class="nav-link" href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -97,7 +97,7 @@
                             <div class="text-bg">
                                 <h1>We translate your vision into reality</h1>
                                 <p>Sourcico’s purpose is to enable you to speed-up your development pace while maintaining cost-efficiancy and flexability.</p>
-                                <a href="#">Read More</a>
+                                <a href="services.html">Read More</a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -197,7 +197,7 @@
     </div>
     <!-- end business -->
     <!-- Testimonial -->
-    <div class="section">
+    <div class="section Testimonial_sec">
         <div class="container">
             <div id="" class="Testimonial">
                 <div class="row">
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" style="height: 208px;">
                     <div class="col-md-3">
                         <div class="Testimonial_box">
                             <i><img src="images/plan1.png" alt="#"/></i>
@@ -264,7 +264,7 @@
                 <div class="col-md-12">
                     <div class="titlepage">
                         <h2>Contact us</h2>
-                        <span>There are many variations of passages of Lorem Ipsum available, but the </span>
+                        <span>Please feel free to drop us a message with any question, We would love to hear from you!</span>
                     </div>
                 </div>
             </div>
@@ -320,7 +320,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Copyright 2019 All Right Reserved By Sourcico</p>
+                            <p>Copyright 2020 All Right Reserved By Sourcico</p>
                         </div>
                     </div>
                 </div>
