add netlify form atribute

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 ">
-                    <form class="main_form ">
+                    <form class="main_form " method="POST" data-netlify="true">
                         <div class="row">
                             <div class="col-md-12 ">
                                 <input class="form_contril" placeholder="Name " type="text" name="Name ">
