input fields rename

--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
                                 <input class="form_contril" placeholder="Phone Number" type="text" name=" Phone Number">
                             </div>
                             <div class="col-md-12">
-                                <input class="form_contril" placeholder="Email" type="text" name="Email">
+                                <input class="form_contril" placeholder="Email" type="email" name="Email">
                             </div>
                             <div class="col-md-12">
                                 <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
                             </div>
                             <div class="col-sm-12">
-                                <button class="send_btn">Send</button>
+                                <button type="submit" class="send_btn">Send</button>
                             </div>
                         </div>
                     </form>
