dev of career & contact page

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <div class="business_box ">
                                 <figure><img src="images/business_img.jpg" alt="#" /></figure>
                                 <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p>
-                                <a class="read_more" href="#">Read more</a>
+                                <a class="read_more" href="services.html">Read more</a>
                             </div>
                         </div>
                     </div>
