--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="height: 208px;">
+                <div class="row">
                     <div class="col-md-3">
                         <div class="Testimonial_box">
                             <i><img src="images/plan1.png" alt="#"/></i>
