Added job pages & images to webp

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="text-img">
-                                <figure><img src="images/box_img.png" alt="#" /></figure>
+                                <figure><img src="images/box_img.webp" alt="#" /></figure>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure><img src="images/1.png" alt="#" /></figure>
+                                    <figure><img src="images/1.webp" alt="#" /></figure>
                                 </div>
                                 <h2>SDLC</h2>
                                 <p>
@@ -142,7 +142,7 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure><img src="images/2.png" alt="#" /></figure>
+                                    <figure><img src="images/2.webp" alt="#" /></figure>
                                 </div>
                                 <h2>R&D</h2>
                                 <p>We are focused on working with R&D organizations using the latest technologies, whether new and agile start-ups or well-established growing, technology companies – Our goal is to enable our clients to fully express their
@@ -154,7 +154,7 @@
                         <div class="col-md-4">
                             <div class="projects_box ">
                                 <div class="projects_box ">
-                                    <figure><img src="images/3.png" alt="#" /></figure>
+                                    <figure><img src="images/3.webp" alt="#" /></figure>
                                 </div>
                                 <h2>Agile</h2>
                                 <p>We are a full agile operation. We also adopt any or all of our Client’s standards, starting from coding convention all the way to continuous integration using our client’s systems for source control and bug tracking. All
@@ -185,7 +185,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/business_img.jpg" alt="#" /></figure>
+                                <figure><img src="images/business_img.webp" alt="#" /></figure>
                                 <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p>
                                 <a class="read_more" href="services.html">Read more</a>
                             </div>
@@ -210,7 +210,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="Testimonial_box">
-                            <i><img src="images/plan1.png" alt="#"/></i>
+                            <i><img src="images/plan1.webp" alt="#"/></i>
                         </div>
                     </div>
                     <div class="col-md-9">
@@ -225,7 +225,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="Testimonial_box">
-                            <i><img src="images/plan2.png" alt="#"/></i>
+                            <i><img src="images/plan2.webp" alt="#"/></i>
                         </div>
                     </div>
                     <div class="col-md-9">
@@ -240,7 +240,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="Testimonial_box">
-                            <i><img src="images/plan3.png" alt="#"/></i>
+                            <i><img src="images/plan3.webp" alt="#"/></i>
                         </div>
                     </div>
                     <div class="col-md-9">
