--- a/careers.html
+++ b/careers.html
@@ -52,7 +52,7 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                                        <a href="index.html"><img src="images/logo.webp" alt="#" /></a>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/career.jpg" alt="#" /></figure>
+                                <figure><img src="images/career.webp" alt="#" /></figure>
                                 <p>We are constantly on the lookout for talented, bright and motivated individuals. We offer a supportive and family-like environment with great compensation at a young and growing company that has a lot of room for personal
                                     growth, learning new technologies and acquiring managerial experience.</p>
                                 <!-- <a class="read_more" href="#">Read more</a> -->
@@ -173,7 +173,7 @@
 
 
                                     </div>
-                                    <a class="read_more" href="#">Apply Now</a>
+                                    <a class="read_more" href="front-end-developer.html">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
 
 
                                     </div>
-                                    <a class="read_more" href="#">Apply Now</a>
+                                    <a class="read_more" href="back-end-developer.html">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
 
 
                                     </div>
-                                    <a class="read_more" href="#">Apply Now</a>
+                                    <a class="read_more" href="cpp-developer.html">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
 
 
                                     </div>
-                                    <a class="read_more" href="#">Apply Now</a>
+                                    <a class="read_more" href="ios-developer.html">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +262,7 @@
 
 
                                     </div>
-                                    <a class="read_more" href="#">Apply Now</a>
+                                    <a class="read_more" href="android-developer.html">Apply Now</a>
                                 </div>
                             </div>
                         </div>
@@ -295,16 +295,16 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="business_box ">
-                                <figure><img src="images/internship-img.jpg" alt="#" /></figure>
+                                <figure><img src="images/internship-img.webp" alt="#" /></figure>
                                 <p>If you are enrolled in University or just finishing your education, but also if you’re visiting some of the private Academies in the city, and you are excited about programming or testing – always asking “What if?”, at
-                                    Sourcico your curiosity matters!We will give you your initial experience with our 4 months Internship program because here the opportunities are endless and the knowledge sharing is one of the most important postulates.
-                                    At Sourcico the Interns are treated like full time employees and are expected to go above and beyond to meet the customers goals. You will have a chance to work with different clients being shifted to different projects
+                                    Sourcico your curiosity matters!We will give you your initial experience with our 4 months Internship program because here the opportunities are endless and the knowledge sharing is one of the most important postulates.</p>
+                                <p>At Sourcico the Interns are treated like full time employees and are expected to go above and beyond to meet the customers goals. You will have a chance to work with different clients being shifted to different projects
                                     and end up like one of our colleagues. For the four months spent in fast paced environment, training is key. Our internship program is focused completely ondevelopment, besides the welcoming atmosphere we will help
                                     you grow professionally, but also privately because we are looking for people that would fit our company culture, not just people that knows how to code. 70% of the people who were interns at Sourcico later on became
-                                    full-time employees at our company, and 100% of the interns became Developers in the community. So, this is pretty much as a guarantee that in the 4 months that you spend here you’ll get the needed knowledge and experience.
-                                </p>
-                                <div class="col-md-8 offset-2 internship">
-                                    <p> We offer internships with a possibility for a full-time employment in the following areas:</p>
+                                    full-time employees at our company, and 100% of the interns became Developers in the community.&nbsp;</p>
+                                <p>So, this is pretty much as a guarantee that in the 4 months that you spend here you’ll get the needed knowledge and experience.</p>
+                                <div class="col-xs-12 col-md-8 offset-md-2 internship">
+                                    <p><strong>We offer internships with a possibility for a full-time employment in the following areas:</strong></p>
                                     <ul>
 
                                         <li>Front-End development: React, Angular, Vue.</li>
@@ -313,7 +313,7 @@
                                         <li>Mobile development: Android, iOS, Hybrid and Native application</li>
                                     </ul>
 
-                                    <p>Qualities that matter to us the most:</p>
+                                    <p><strong>Qualities that matter to us the most:</strong></p>
                                     <ul>
                                         <li>Passion and enthusiasm for software development, as well as understanding the full development life-cycle and best practices</li>
                                         <li>Ability to work and collaborate in team, capable of individual “deep work” as well</li>
@@ -334,8 +334,9 @@
                     <div class="titlepage">
                         <span>Sending you CV</span>
                         <h2>Join us</h2>
-                        <p>Please send your Curriculum Vitae (in English) to <a href="mailto:jobs@sourcico.com"><strong>jobs@sourcico.com</strong></a>.<br> Please mention the position number you are applying to.<br> All applications will be treated with
-                            the strictest confidentiality</p>
+                        <p>Please send your Curriculum Vitae (in English) to <a href="mailto:jobs@sourcico.com"><strong>jobs@sourcico.com</strong></a>.<br> Please mention the position you are applying to.<br> All applications will be treated with the strictest
+                            confidentiality
+                        </p>
                     </div>
                 </div>
             </div>
