--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-    <!-- <link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
+    <link rel="icon" href="images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <!-- <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
     <!-- Tweaks for older IEs-->
@@ -333,10 +333,10 @@
     <!-- end footer -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
+    <!-- <script src="js/popper.min.js"></script> -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
+    <!-- <script src="js/plugin.js"></script> -->
     <!-- sidebar -->
     <!-- <script src="js/jquery.mCustomScrollbar.concat.min.js"></script> -->
     <script src="js/custom.js"></script>
