implement minify on all pages

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- style css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <!-- Responsive-->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.min.css">
     <!-- fevicon -->
     <link rel="icon" href="images/fevicon.png" type="image/gif">
     <!-- Scrollbar Custom CSS -->
@@ -58,8 +58,7 @@
                         </div>
                         <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                             <nav class="navigation navbar navbar-expand-md navbar-dark"><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                                <div
-                                    class="collapse navbar-collapse" id="navbarsExample04">
+                                <div class="collapse navbar-collapse" id="navbarsExample04">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -67,31 +66,31 @@
                                         <li class="nav-item"><a class="nav-link" href="careers.html">Careers</a></li>
                                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                                     </ul>
-                        </div>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- end header inner -->
-        <!-- end header -->
-        <!-- banner -->
-        <section class="banner_main">
-            <div class="container-fluid">
-                <div class="row d_flex">
-                    <div class="col-md-6">
-                        <div class="text-bg">
-                            <h1>We translate your vision into reality</h1>
-                            <p>Sourcico’s purpose is to enable you to speed-up your development pace while maintaining cost-efficiancy and flexability.</p><a href="services.html">Read More</a></div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="text-img">
-                            <figure><img src="images/box_img.webp" alt="#"></figure>
+                                </div>
+                            </nav>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+            <!-- end header inner -->
+            <!-- end header -->
+            <!-- banner -->
+            <section class="banner_main">
+                <div class="container-fluid">
+                    <div class="row d_flex">
+                        <div class="col-md-6">
+                            <div class="text-bg">
+                                <h1>We translate your vision into reality</h1>
+                                <p>Sourcico’s purpose is to enable you to speed-up your development pace while maintaining cost-efficiancy and flexability.</p><a href="services.html">Read More</a></div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="text-img">
+                                <figure><img src="images/box_img.webp" alt="#"></figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </header>
     <!-- end banner -->
@@ -126,7 +125,8 @@
                                 </div>
                                 <h2>R&D</h2>
                                 <p>We are focused on working with R&D organizations using the latest technologies, whether new and agile start-ups or well-established growing, technology companies – Our goal is to enable our clients to fully express their
-                                    innovation</p>
+                                    innovation
+                                </p>
                                 <!-- <a class="read_more" href="#">Read more</a> --></div>
                         </div>
                         <div class="col-md-4">
