webp fallback test

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                        <a href="index.html">
+                                            <picture>
+                                                <source type="image/webp" srcset="images/logo.webp" alt="Test Impact Analysis.">
+                                                <img src="images/logo.png" alt="Test Impact Analysis.">
+                                            </picture>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
