webp fallback tet 2

--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
                         </div>
                         <div class="col-md-6">
                             <div class="text-img">
-                                <figure><img src="images/box_img.webp" alt="#"></figure>
+                                <picture>
+                                    <source type="image/webp" srcset="mages/box_img.webp" alt="Test Impact Analysis.">
+                                    <img src="mages/box_img.png" alt="Test Impact Analysis.">
+                                </picture>
+
                             </div>
                         </div>
                     </div>
