--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                                     <div class="logo">
                                         <a href="index.html">
                                             <picture>
-                                                <source type="image/webp" srcset="images/logo.webp" alt="Test Impact Analysis.">
-                                                <img src="images/logo.png" alt="Test Impact Analysis.">
+                                                <source type="image/webp" srcset="images/logo.webp" alt="">
+                                                <img src="images/logo.png" alt="">
                                             </picture>
                                         </a>
                                     </div>
@@ -91,8 +91,8 @@
                         <div class="col-md-6">
                             <div class="text-img">
                                 <picture>
-                                    <source type="image/webp" srcset="mages/box_img.webp" alt="Test Impact Analysis.">
-                                    <img src="mages/box_img.png" alt="Test Impact Analysis.">
+                                    <source type="image/webp" srcset="mages/box_img.webp" alt="">
+                                    <img src="mages/box_img.png" alt="">
                                 </picture>
 
                             </div>
