--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@
                         <div class="col-md-6">
                             <div class="text-img">
                                 <picture>
-                                    <source type="image/webp" srcset="mages/box_img.webp" alt="">
-                                    <img src="mages/box_img.png" alt="">
+                                    <source type="image/webp" srcset="images/box_img.webp" alt="">
+                                    <img src="images/box_img.png" alt="">
                                 </picture>
-
                             </div>
                         </div>
                     </div>
